--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,13 +4,14 @@
     margin: 0px;
     list-style: none;
     text-decoration: none;
+    color: #024001;
 }
 
 body
 {
     /* background-image: linear-gradient(to bottom, #e8f7e2, #ffffff); */
     background-color:  #e8f7e2;
-    text-decoration: rtl;
+    direction: rtl;
 
 }
 
@@ -43,7 +44,11 @@ header
 
 .inner-header .center-header
 {
+    float: left;
     width: 10%;
+    height: 100%;
+    background-color: #a7ff81;
+
 }
 
 .inner-header .left-header .upperlines,
@@ -53,7 +58,6 @@ header
     width: 5%;
     height: 100%;
     background-color: #afff8c;
-    color: black;
 }
 
 .inner-header .left-header .header-title,
@@ -63,36 +67,67 @@ header
     height: 100%;
     display: table-cell;
     vertical-align: middle;
-    color: green;
-    /* background-color: lightblue; */
     text-align: center;
     font-size: 32px;
     font-weight: bold;
 }
+/* 
+.search-container
+{
+    
+    float: center;
+    margin: 20px 50px;
+    padding: 10px;
+    border: 1px dashed red;
+}
+.search-container input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
+
+.search-container button {
+    float: center;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #d7d7d7;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+  }
+
+.search-container button:hover {
+    background: #ccc;
+  }
+
+.search-container input[type=text], .search-container button {
+    float: none;
+
+    display: block;
+    text-align: left;
+    width: 60%;
+    margin: 1%  ;
+    padding: 14px;
+  } */
 
 .container
 {
-    background-color: #ffff1f;
+    /* background-color: #ffff1f; */
     margin: 20px auto;
-}
-main
-{
-    float: none;
-    padding: 200px;
-    background-color: chartreuse;
+    padding: 10px;
 }
 
 .container nav
 {
     float: right;
     margin-right: 20px;
-    padding: 50px;
-    /* background-color: red; */
 }
 
 nav .base
 {
-    padding: 50px 0px;
+    padding: 25% 0px;
     background-color: #024000;
     z-index: 0;
 }
@@ -114,8 +149,127 @@ nav .base .active
 {
     border: rgb(9, 255, 0) dashed;
 }
-footer
+
+.container ul li
 {
-    background-color: black;
+    margin: 1% 25%;
+    font-size: 25px;
+    list-style: circle;
+    color: #024001;
 }
 
+.container p
+{
+    font-size: 32px;
+    margin: 5% 20% 0 10%;
+    color: #024001;
+}
+
+
+
+main
+{
+    display: flex;
+    padding: 10px;
+    margin: 0px 20% 0px 0px;
+    flex-wrap: wrap;
+}
+
+main div
+{
+    border: 2px #ccc dashed;
+    padding: 3px;
+    margin: 10px;
+    width: 25%;
+    height: 100px;
+}
+
+main div a img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.card 
+{
+    margin: 10px 25%;
+    padding: 10px;
+    width: 50%;
+    height: 50%;
+}
+
+.card .card-header
+{
+    padding: 10px;
+    margin: 10px 10%;
+    border: 3px green dashed;
+    background-color: #afff8e;
+}
+
+
+
+.card .card-container
+{
+
+    width: 80%;
+    padding: 5px;
+    margin: 20px 60px 0px 0px ;
+    height: 100%;
+    border: 3px green dashed;
+
+    background-color: #e6e6e6;
+ 
+}
+
+
+.card .card-container .image-container
+{
+
+    border: 3px green dotted;
+    margin: 10px;
+    width: 97%;
+    height: 100%;
+}
+
+.card .card-container .image-container img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.card .card-container button
+{
+    margin: 0px 10px 0px 0px;
+    border: none;
+    display: inline;
+    background-color: #e6e6e6;
+
+}
+
+.card .card-container button img
+{
+    width: 20px;
+    height: 20px;
+
+}
+
+.card-list
+{
+    padding: 10px;
+    margin: 10px;
+    background-color: rgb(255, 0, 0);
+}
+
+
+footer
+{
+    /* margin: 0px 20% 0px 0px; */
+    z-index: -1;
+    width: 100%;
+    height: 200px;
+}
+footer img
+{
+    width: 100%;
+    height: 100%;
+}
